--- a/package.json
+++ b/package.json
@@ -17,16 +17,12 @@
     "babel-eslint": "^8.2.5",
     "eslint": "^5.0.1",
     "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jest": "^21.17.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.10.0"
+    "eslint-plugin-jest": "^21.17.0"
   },
   "dependencies": {
     "babel-eslint": "^9.0.0",
     "eslint": "^5.4.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^21.22.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1"
+    "eslint-plugin-jest": "^21.22.0"
   }
 }
