--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jest": "^22.5.1"
+    "eslint-plugin-jest": "^22.5.1",
+    "eslint-plugin-react-hooks": "^4.0.5"
   },
   "bugs": {
     "url": "https://github.com/chronograph-pe/chronograph/issues"
